---
source: compiler/chipc-codegen/tests/llvm_ir/main.rs
assertion_line: 35
expression: processed
---
; ModuleID = 'test-package'
source_filename = "test-package"
target datalayout = "<redacted>"
target triple = "<redacted>"

declare available_externally void @foreign(i8)

define i8 @the_answer() {
entry:
  br label %bb

bb:                                               ; preds = %entry
  ret i8 42
}
